# pilkit

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: python.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/_ext/: pil.py
docs/source/processors/: filter.rst  resize.rst
pilkit/: __init__.py  exceptions.py  lib.py  pkgmeta.py  utils.py
pilkit/processors/: __init__.py  base.py  convert.py  crop.py  filter.py  overlay.py  resize.py  utils.py
tests/: test_processors.py  test_utils.py  utils.py
