[build-system]
requires = ["setuptools >= 75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pilkit"
description = "A collection of utilities and processors for the Python Imaging Library."
dynamic = ["version"]
requires-python = ">= 3.8"
readme = "README.rst"
license = { text = "BSD-3-Clause" }
authors = [
    {name = "Matthew Tretter", email = "m@tthewwithanm.com"},
]
maintainers = [
  {name = "Bryan Veloso"},
  {name = "Matthew Tretter"},
  {name = "Chris Drackett"},
  {name = "Greg Newma"},
  {name = "Venelin Stoykov"},
]
dependencies = [
    "Pillow>=7.0",
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Utilities",
]

[dependency-groups]
dev = ["pytest", "pytest-cov"]

[project.urls]
Documentation = "https://pilkit.readthedocs.io/en/latest/"
Repository = "https://github.com/matthewwithanm/pilkit.git"
Issues = "https://github.com/matthewwithanm/pilkit/issues"
